--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,17 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "pwa-chrome",
+      "type": "firefox",
       "request": "launch",
       "name": "Open index.html",
       "url": "http://localhost:3000",
-      "webRoot": "${workspaceFolder}\\dist\\**\\*"
+      "webRoot": "${workspaceFolder}\\pacman\\dist\\**\\*",
+      "pathMappings": [
+        {
+          "url": "http://localhost:3000/app",
+          "path": "${workspaceFolder}/pacman/app"
+        }
+      ]
     }
   ]
 }
