--- a/pacman/tsconfig.json
+++ b/pacman/tsconfig.json
@@ -3,7 +3,8 @@
         "outDir": "dist/js",
         "target": "ESNext",
         "noEmitOnError": true,
-        "noImplicitAny": true
+        "noImplicitAny": true,
+        "sourceMap": true
     },
     "lib": ["es6", "es2017.string"],
     "include": ["app/**/*"]
